# halo9-plugin

./: .gitignore  CMakeLists.txt  README.md  build.sh
Source/: EmbeddedHalo9.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: H9SynthVoice.h  LoopPlayer.cpp  LoopPlayer.h  PadSampler.cpp  PadSampler.h
Source/Data/: FactorySounds.h  H9Library.cpp  H9Library.h  PackScanner.cpp  PackScanner.h
Source/UI/: H9LookAndFeel.cpp  H9LookAndFeel.h
assets/halo9_library/: library.json
assets/halo9_library/drumkits/808Classic/: manifest.json
assets/halo9_library/packs/LoFi/: manifest.json
